[package]
name = "ecg-hub-common"
description = "Common libraru for ECG Hub"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
uuid.workspace = true
