[package]
name = "ecg-hub-server"
description = "Hub Server for ECG game"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "ecg-hub-common", features = ["sqlx"], path = "../common" }

serde.workspace = true
uuid.workspace = true

axum = { version = "0.6", features = ["http2"] }
argon2 = "0.4"
ed25519-dalek = "1.0"
hex = "0.4"
rand_8 = { package = "rand", version = "0.8", features = ["std"] }
rand_7 = { package = "rand", version = "0.7", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4"
hyper = { version = "0.14" }
validator = { version = "0.16", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
tokio = { version = "1.23", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
