[package]
name = "ecg-hub-server"
description = "Hub Server for ECG game"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "ecg-hub-common", features = ["sqlx"], path = "../common" }

serde.workspace = true
uuid.workspace = true

argon2 = "0.4"
async-trait = "0.1"
axum = { version = "0.6", features = ["http2", "headers"] }
axum-extra = { version = "0.4", features = ["cookie"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["serde"] }
ed25519-compact = { version = "2.0", features = ["pem"] }
envy = "0.4"
hex = "0.4"
hyper = { version = "0.14" }
jsonwebtoken = "8.2"
lazy_static = "1.4"
rand = { package = "rand", version = "0.8", features = ["std"] }
regex = "1.7"
serde_json = "1.0"
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "uuid",
] }
tokio = { version = "1.23", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.16", features = ["derive"] }
